@@ -1,3 +1,5 @@
+0041beta ReplicatorG
+* Lots of Richard's changes
 0040 ReplicatorG
 * Replicator 2 profile now more robust
 * support for selecting between s3g, x3g file formats (future bots)
